src/objects/FLAGS__CaseFlagsBusinessHours__c.object
<CustomObject>
    <description>A wrapper around the standard Business Hours object to allow Case Flags to compare the current time to the current day&apos;s Business Hours.</description>
    <fields>
        <fullName>FLAGS__BusinessHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The standard Business Hour record being referenced.</description>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Case Flags Business Hours</relationshipLabel>
        <relationshipName>Case_Flags_Business_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLAGS__TodayEndTime__c</fullName>
        <description>The current day&apos;s end time as defined in the standard Business Hour record.</description>
        <label>Today End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLAGS__TodayStartTime__c</fullName>
        <description>The current day&apos;s start time as defined in the standard Business Hour record.</description>
        <label>Today Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Case Flags Business Hours</label>
    <nameField>
        <label>Case Flags Business Hours Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Flags Business Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>